--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 01:05:02 2018</p>
+         Last Run: Tue Nov 13 02:05:15 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,23 +34,23 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>6</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>0</td>
-                        <td>-4</td>
+                        <td>1</td>
+                        <td>-3</td>
                         <td>3</td>
-                        <td>73</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>4</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>5</td>
+                        <td>4</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-4",
+                 "-3",
                  "-4"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "1",
-                 "0",
+                 "1",
                  "0"
                ]
              }
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
-                 "73",
-                 "73"
+                 "75",
+                 "75",
+                 "74"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "7",
                  "6",
-                 "4",
-                 "5"
+                 "4"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 01:05:02 2018</p>
+         Last Run: Tue Nov 13 02:05:15 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>5</td>
-                        <td>84</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -261,7 +261,7 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>4</td>
-                        <td>79</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -272,7 +272,7 @@
                         <td>Clear</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>2</td>
+                        <td>3</td>
                         <td>71</td>
                         <td>0</td>
                         <td>8</td>
@@ -288,8 +288,8 @@
                         <td>63</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>WSW</td>
-                        <td>3</td>
+                        <td>SW</td>
+                        <td>4</td>
                      </tr>
                   </tbody>
                </table>
@@ -393,7 +393,7 @@
                "data":[
                  "5",
                  "4",
-                 "2",
+                 "3",
                  "2"
                ]
              },
@@ -403,8 +403,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "84",
-                 "79",
+                 "86",
+                 "80",
                  "71",
                  "63"
                ]
@@ -418,7 +418,7 @@
                  "2",
                  "3",
                  "3",
-                 "3"
+                 "4"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 01:05:02 2018</p>
+         Last Run: Tue Nov 13 02:05:15 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -480,14 +480,14 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>3</td>
-                        <td>-1</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>1</td>
-                        <td>52</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>42</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -499,7 +499,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>43</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -510,7 +510,7 @@
                         <td>48</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>43</td>
                      </tr>
                   </tbody>
@@ -538,7 +538,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
+                 "-2",
                  "1",
                  "1"
                ]
@@ -550,7 +550,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "3",
+                 "2",
                  "4",
                  "4"
                ]
@@ -620,7 +620,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "52",
+                 "53",
                  "50",
                  "48"
                ]
@@ -631,8 +631,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "42",
-                 "43",
+                 "44",
+                 "44",
                  "43"
                ]
              }
