--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 02:05:15 2018</p>
+         Last Run: Tue Nov 13 03:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>75</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>75</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>6</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>74</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>4</td>
+                        <td>3</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "75",
-                 "75",
-                 "74"
+                 "74",
+                 "73",
+                 "72"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "7",
                  "6",
-                 "4"
+                 "4",
+                 "3"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 02:05:15 2018</p>
+         Last Run: Tue Nov 13 03:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -270,8 +270,8 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-6</td>
-                        <td>-10</td>
+                        <td>-7</td>
+                        <td>-11</td>
                         <td>3</td>
                         <td>71</td>
                         <td>0</td>
@@ -288,7 +288,7 @@
                         <td>63</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>4</td>
                      </tr>
                   </tbody>
@@ -319,7 +319,7 @@
                "data":[
                  "-16",
                  "-13",
-                 "-10",
+                 "-11",
                  "-8"
                ]
              },
@@ -332,7 +332,7 @@
                "data":[
                  "-11",
                  "-9",
-                 "-6",
+                 "-7",
                  "-4"
                ]
              }
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 02:05:15 2018</p>
+         Last Run: Tue Nov 13 03:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -483,11 +483,11 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>44</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -495,11 +495,11 @@
                         <td>4</td>
                         <td>1</td>
                         <td>2</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>44</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -510,7 +510,7 @@
                         <td>48</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>WNW</td>
+                        <td>W</td>
                         <td>43</td>
                      </tr>
                   </tbody>
@@ -620,8 +620,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
-                 "50",
+                 "54",
+                 "51",
                  "48"
                ]
              },
@@ -631,8 +631,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "44",
-                 "44",
+                 "42",
+                 "43",
                  "43"
                ]
              }
