--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 04:05:05 2018</p>
+         Last Run: Tue Nov 13 05:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -37,8 +37,8 @@
                         <td>74</td>
                         <td>0</td>
                         <td>16</td>
-                        <td>W</td>
-                        <td>6</td>
+                        <td>WNW</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>4</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>3</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "74",
-                 "73",
+                 "72",
                  "72"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "6",
-                 "4",
-                 "3"
+                 "9",
+                 "7",
+                 "6"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 04:05:05 2018</p>
+         Last Run: Tue Nov 13 05:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -261,7 +261,7 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>4</td>
-                        <td>79</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -270,10 +270,10 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-6</td>
-                        <td>-10</td>
+                        <td>-7</td>
+                        <td>-11</td>
                         <td>3</td>
-                        <td>71</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -285,7 +285,7 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>2</td>
-                        <td>63</td>
+                        <td>64</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
@@ -319,7 +319,7 @@
                "data":[
                  "-16",
                  "-13",
-                 "-10",
+                 "-11",
                  "-8"
                ]
              },
@@ -332,7 +332,7 @@
                "data":[
                  "-11",
                  "-9",
-                 "-6",
+                 "-7",
                  "-4"
                ]
              }
@@ -404,9 +404,9 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "86",
-                 "79",
-                 "71",
-                 "63"
+                 "80",
+                 "72",
+                 "64"
                ]
              },
              {
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 04:05:05 2018</p>
+         Last Run: Tue Nov 13 05:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -483,23 +483,23 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>42</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>4</td>
-                        <td>1</td>
+                        <td>3</td>
+                        <td>-1</td>
                         <td>2</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>43</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -507,11 +507,11 @@
                         <td>4</td>
                         <td>1</td>
                         <td>2</td>
-                        <td>48</td>
+                        <td>50</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>43</td>
+                        <td>36</td>
                      </tr>
                   </tbody>
                </table>
@@ -539,7 +539,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "1",
+                 "-1",
                  "1"
                ]
              },
@@ -551,7 +551,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "2",
-                 "4",
+                 "3",
                  "4"
                ]
              }
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "51",
-                 "48"
+                 "55",
+                 "52",
+                 "50"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "42",
-                 "43",
-                 "43"
+                 "37",
+                 "36",
+                 "36"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 04:05:05 2018</p>
+         Last Run: Tue Nov 13 05:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,11 +698,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>67</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>44</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,11 +710,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>66</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>42</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -722,11 +722,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>1</td>
-                        <td>67</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>41</td>
+                        <td>35</td>
                      </tr>
                   </tbody>
                </table>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "66",
-                 "67"
+                 "64",
+                 "63",
+                 "64"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "44",
-                 "42",
-                 "41"
+                 "39",
+                 "37",
+                 "35"
                ]
              }
            ]
